adding font, simplebar library for custom scrollbar and side menu with styles for desktop

--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@ share on fb option
 linters and formatters(esp css)
 bootstrap or tailwind
 optimize webpack / bundle css
+test stuff  with js disabled
 ----------------Social, incl in menu----------------
 facebook
 ...
