--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,8 @@
-z-index of tooltiip 
-click on suggestion functionality
 combine suggestion and marker as db(json)
+add loader
 
 different marker colors for nearby streets/neighbours
-how to switch different subpages in index.html
+
 
 share on fb option
 linters and formatters(esp css)
