created database like file with places and bind it to markers.js to create all markers and random places dynamically with goto functionality

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
-combine suggestion and marker as db(json)
 add loader
+imports are not quite good 
+think about markers count and visibility based on zoom
 
 different marker colors for nearby streets/neighbours
 
@@ -15,3 +16,11 @@ facebook
 ----------------Ways to collect donations------------
 patreon
 ...
+
+--------------Презентация----------------------
+За малки и за големи, но най-вече любопитни. Този проект предоставя
+знание за значението на имената на софийските улици. 
+Информацията, която дава, не гарантира пълна коректност и обхват.
+Ако имате препоръки, предложения за промяна на съдържанието или искате да ни оставите
+обратна връзка, моля вижте таба за контакт. Този проект е напълно безплатен,
+но ако искате да ни подпомогнете, моля посетете таба подкрепа. Благодарим ви!
